[tool.poetry]
name = "markdownio"
version = "0.0.2"
description = "Python tool to write Markdown as code easily."
authors = ["u8slvn <u8slvn@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
coverage = "^6.0.2"
flake8 = "^4.0.1"
bandit = "^1.7.0"
black = "^21.9b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
