[tool.poetry]
name = "markdownio"

version = "0.1.0"
description = "Python tool to write Markdown as code easily."
authors = ["u8slvn <u8slvn@gmail.com>"]

license = "MIT"
readme = "README.md"
repository = "https://github.com/u8slvn/markdownio"
homepage = "https://github.com/u8slvn/markdownio"

classifiers = [
    'Intended Audience :: Developers',
    'Development Status :: 5 - Production/Stable',
    'Topic :: Software Development :: Build Tools',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Natural Language :: English',
    'Programming Language :: Python',
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
keywords=[
    "markdown",
    "domain-specific-language",
    "markup-language",
]

include = [
    "LICENSE",
    "CHANGELOG.md",
    "README.md",
    "documentation/*",
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
coverage = "^6.0.2"
flake8 = "^4.0.1"
bandit = "^1.7.0"
black = "^21.9b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
